                   traversers.  This should fix a large number of traversals
                   that stop and never resume.  Some timeouts were lengthened
                   as well, so some long-running tasks should no longer be
                   considered "hung" and are likely to complete successfully.

  * Fix Issue 123: Properties, including passwords, were inadvertently logged.



Release 1.3.0, Jan 13, 2009
===========================

Introduction
------------
This is an upgrade release with some enhancements.  Users of previous
releases are encouraged to upgrade.  It also contains some new features.  Users
of previous releases should check the "Version Compatibility" section below for
instructions on how to use existing data with this new release.

Summary of Changes
------------------
  * Fix Issue 9:   Miscellaneous minor issues in mock pusher
  * Fix Issue 49:  Connector instance properties are stored before they are validated.
  * Fix Issue 52:  ConnectorFactory interface in the Javadoc is not documented
  * Fix Issue 57:  AuthorizationResponse.equals should use the valid field
  * Fix Issue 58:  site: operator doesn't work with connector feeds
  * Fix Issue 59:  Add a canonical title property
  * Fix Issue 62:  TraversalContextAware interface is not used
  * Fix Issue 72:  Multiple problems with exception handling in QueryTraverser.runBatch
  * Fix Issue 78:  Fix config storage
  * Fix Issue 80:  Implement ConnectorFactory
  * Fix Issue 81:  Encrypt property with 'password' case insensitive
  * Fix Issue 85:  Property accesses are not documented clearly
  * Fix Issue 100: Sending documents with a search url causes exception for smb paths.
  * Fix Issue 102: Tomcat process may not exit on Linux
  * Fix Issue 105: Allow retrieval of CM and/or Connector config by the GSA
  * Fix Issue 108: Fix exception handling in DocPusher
  * Fix Issue 109: Latest svn connector-manager builds (post 1.1) do not set googleworkdir