@@ -30,6 +30,8 @@ Summary of Changes
 
   * Fix Issue 123: Properties, including passwords, were inadvertently logged.
 
+  * Fix Issue 130: Wrong error messaged displayed if error status is returned
+                   from SetConnectorConfig servlet.
 
 
 Release 1.3.0, Jan 13, 2009
